<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >


    <PreferenceCategory android:title="GPS UPDATE OPTIONS" >
        <ListPreference
                android:title="@string/text_pref_gps_time_title"
                android:summary="@string/text_pref_gps_time_subtitle"
                android:key="prefUsername"
                android:entries="@array/gps_time_frequency_text"
                android:entryValues="@array/gps_min_distance_update_text"/>
    </PreferenceCategory>



        <ListPreference
                android:key="prefSyncFrequency"
                android:entries="@array/gps_time_frequency_text"
                android:summary="@string/text_pref_gps_dist_subtitle"
                android:entryValues="@array/gps_time_frequency_text"
                android:title="@string/text_pref_gps_dist_title" />

</PreferenceScreen>