<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_text_header"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewDialogTariffs" android:layout_below="@+id/textView"
            android:layout_above="@+id/bottomLinearDialogTariff"/>
    <LinearLayout
            android:id="@+id/bottomLinearDialogTariff"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_text_check_box"
                android:id="@+id/checkBoxDialogDontShowDialog"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog_text_button_default"
                android:id="@+id/buttonDialogUseDefaultTariff" android:textSize="12dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>